3d-portafolio/src/components/bedroomExperience/world/helper/InfoHelper.module.css
.container{
  position: absolute;
  bottom: 1rem;
  left: 1rem;
  display: flex;
  column-gap: 1rem;
  align-items: center;
  z-index: 102;
  pointer-events: none;
  touch-action: none;
}

.image {
  width: 5rem;
  height: 5rem;
}

.message {
  background-color: white;
  padding: 0.5rem 1rem;
  border: 1px solid black;
  color: black;
  font-size: 1.6rem;
  border-radius: 8px;
}


/* Tablet and Phone */
@media screen and (max-width: 768px) {
  .image {
    width: 3rem;
    height: 3rem;
  }

  .message {
    font-size: 1.4rem;
  }
}

